# CryptoSigning

./: CMakeLists.txt  README.md
include/CryptoSigning/: Sign.hpp  Verify.hpp
src/: Sign.cpp  Verify.cpp
test/: CMakeLists.txt
test/src/: SignTests.cpp  VerifyTests.cpp
